--- a/dev/build.gradle
+++ b/dev/build.gradle
@@ -24,6 +24,11 @@ subprojects {
   def bndProject = bndWorkspace.getProject(name)
   if (bndProject != null) {
     plugins.apply 'biz.aQute.bnd'
+    plugins.apply 'net.ossindex.audit'
+
+    audit {
+    	failOnError = false
+    }
   } else {
     task publish { }
     task release { }
