--- a/dev/settings.gradle
+++ b/dev/settings.gradle
@@ -207,12 +207,16 @@ buildscript {
       url ("https://" + props.getProperty("artifactory.download.server") + "/artifactory/wasliberty-open-liberty")
       }
    } else {
-        maven { url uri(bnd_repourl) }
+        maven { 
+	   url uri(bnd_repourl) 
+	   url 'https://plugins.gradle.org/m2/'
+	}
    }
   }
 
   dependencies {
-    classpath bnd_plugin
+    classpath bnd_plugin 
+    classpath "gradle.plugin.net.ossindex:ossindex-gradle-plugin:0.3.18-beta"
   }
 
   /* Since the files in the repository change with each build, we need to recheck for changes */
